Fix image overflow

--- a/src/app.css
+++ b/src/app.css
@@ -7,3 +7,8 @@ body {
 	font-style: normal;
 }
 */
+
+img {
+	max-width: 100%;
+	height: auto;
+}
